Fix alignment of radio buttons in form

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -7,6 +7,10 @@ li label {
   display: inline;
 }
 
+.form-check {
+  padding-top: 0.375rem;
+}
+
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
